src/test/ui/specialization-feature-gate-default.stderr
error[E0658]: specialization is unstable (see issue #31844)
  --> $DIR/specialization-feature-gate-default.rs:20:5
   |
LL |     default fn foo(&self) {} //~ ERROR specialization is unstable
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(specialization)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
